objects/ProductLineQualityContactMapping__c.object
<CustomObject>
    <fields>
        <fullName>AccountableOrganization__c</fullName>
        <label>Accountable Organization</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 5) OR (4)</booleanFilter>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Location_Type__c</field>
                <operation>notEqual</operation>
                <value>Customer Care Center</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>To be deactivated</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>Inactive</value>
            </filterItems>
            <filterItems>
                <field>$Source.Id</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessRiskEscalationEntity__c</referenceTo>
        <relationshipLabel>Product Lines In scope</relationshipLabel>
        <relationshipName>ProductLineQualityContactMappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <formula>TEXT(Product__r.BusinessUnit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit(BU)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <formula>TEXT(Product__r.ProductLine__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>OPP_Product__c</referenceTo>
        <relationshipName>ProductLineQualityContactMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QualityContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QualityContact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProductLineQualityContactMappings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TECH_GMRCode__c</fullName>
        <formula>Product__r.TECH_PM0CodeInGMR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_GMRCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_PLGMRCode__c</fullName>
        <formula>TRIM(LEFT(Product__r.TECH_PM0CodeInGMR__c, VALUE($Label.CLOCT14I2P08)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_PLGMRCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_Uniqueness1__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>TECH_Uniqueness1</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TECH_Uniqueness__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>TECH_Uniqueness</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProductLineQualityContactMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Lines In scope</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AccountableOrganization__c</columns>
        <columns>ProductLine__c</columns>
        <columns>QualityContact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Transfo</fullName>
        <columns>NAME</columns>
        <columns>AccountableOrganization__c</columns>
        <columns>ProductLine__c</columns>
        <columns>QualityContact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductLine__c</field>
            <operation>contains</operation>
            <value>Transfo</value>
        </filters>
        <label>Transfo</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PLIS-{0000}</displayFormat>
        <label>Product Lines In Scope Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Lines In scope</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>